// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlpSandbox init additional apps 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=my.id",
      "applicationType": "URL",
      "description": "",
      "title": "my.id",
      "url": "..",
    },
    "myObject-action": Object {
      "additionalInformation": "SAPUI5.Component=test.fe.v2.other",
      "applicationType": "URL",
      "description": "This is a very simple application.",
      "title": "My Other App",
      "url": "/yet/another/app",
    },
    "testfev2app-preview": Object {
      "additionalInformation": "SAPUI5.Component=test.fe.v2.app",
      "applicationType": "URL",
      "description": "This is a very simple application.",
      "title": "My Simple App",
      "url": "/simple/app",
    },
  },
  "basePath": "..",
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "applyConnector": "open/ux/preview/client/flp/WorkspaceConnector",
        "custom": true,
        "writeConnector": "open/ux/preview/client/flp/WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "",
    "resources": Object {
      "my.id": "..",
      "open.ux.preview.client": "/preview/client",
      "test.fe.v2.app": "/simple/app",
      "test.fe.v2.other": "/yet/another/app",
    },
    "theme": "sap_horizon",
  },
}
`;

exports[`FlpSandbox init minimal manifest 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=my.id",
      "applicationType": "URL",
      "description": "",
      "title": "my.id",
      "url": "..",
    },
  },
  "basePath": "..",
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "applyConnector": "open/ux/preview/client/flp/WorkspaceConnector",
        "custom": true,
        "writeConnector": "open/ux/preview/client/flp/WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "",
    "resources": Object {
      "my.id": "..",
      "open.ux.preview.client": "/preview/client",
    },
    "theme": "sap_horizon",
  },
}
`;

exports[`FlpSandbox init optional configurations 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=test.fe.v2.app",
      "applicationType": "URL",
      "description": "This is a very simple application.",
      "title": "My Simple App",
      "url": "..",
    },
  },
  "basePath": "..",
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "applyConnector": "open/ux/preview/client/flp/WorkspaceConnector",
        "custom": true,
        "writeConnector": "open/ux/preview/client/flp/WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template",
    "resources": Object {
      "open.ux.preview.client": "/preview/client",
      "test.fe.v2.app": "..",
    },
    "theme": "sap_horizon_dark",
  },
}
`;

exports[`FlpSandbox init ui5Theme 1`] = `
Object {
  "apps": Object {
    "app-preview": Object {
      "additionalInformation": "SAPUI5.Component=test.fe.v2.app",
      "applicationType": "URL",
      "description": "This is a very simple application.",
      "title": "My Simple App",
      "url": "..",
    },
  },
  "basePath": "..",
  "locateReuseLibsScript": false,
  "ui5": Object {
    "bootstrapOptions": "",
    "flex": Array [
      Object {
        "applyConnector": "open/ux/preview/client/flp/WorkspaceConnector",
        "custom": true,
        "writeConnector": "open/ux/preview/client/flp/WorkspaceConnector",
      },
      Object {
        "connector": "LocalStorageConnector",
        "layers": Array [
          "CUSTOMER",
          "USER",
        ],
      },
    ],
    "libs": "sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template",
    "resources": Object {
      "open.ux.preview.client": "/preview/client",
      "test.fe.v2.app": "..",
    },
    "theme": "sap_fiori_3",
  },
}
`;

exports[`FlpSandbox router GET /preview/api/changes 1`] = `"{\\"sap.ui.fl.myid\\":{\\"id\\":\\"myId\\"}}"`;

exports[`FlpSandbox router editor with config 1`] = `
"<!DOCTYPE HTML>
<html lang=\\"en\\">
<!-- Copyright (c) 2015 SAP AG, All Rights Reserved -->

<head>
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Local FLP Sandbox</title>

    <!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
    <script type=\\"text/javascript\\">
        window[\\"sap-ushell-config\\"] = {
            defaultRenderer: \\"fiori2\\",
            renderers: {
                fiori2: {
                    componentData: {
                        config: {
                            search: \\"hidden\\",
                            enableSearch: false
                        }
                    }
                }
            },
            applications:  {\\"app-preview\\":{\\"title\\":\\"My Simple App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.app\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"..\\"},\\"testfev2other-preview\\":{\\"title\\":\\"My Other App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.other\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"/yet/another/app\\"}}
        };
    </script>

    <script src=\\"../test-resources/sap/ushell/bootstrap/sandbox.js\\" id=\\"sap-ushell-bootstrap\\"></script>
    <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions=\\"allow\\"'' is a NON-SECURE setting for test environments -->
    <script id=\\"sap-ui-bootstrap\\"
        src=\\"../resources/sap-ui-core.js\\"
        data-sap-ui-libs=\\"sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template,sap.ui.rta\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-preload=\\"async\\"
        data-sap-ui-theme=\\"sap_horizon_dark\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-language=\\"en\\"
        data-sap-ui-bindingSyntax=\\"complex\\"
        data-sap-ui-flexibilityServices='[{\\"applyConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"writeConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"custom\\":true},{\\"connector\\":\\"LocalStorageConnector\\",\\"layers\\":[\\"CUSTOMER\\",\\"USER\\"]}]'
        data-sap-ui-resourceroots='{\\"open.ux.preview.client\\":\\"/preview/client\\",\\"test.fe.v2.app\\":\\"..\\",\\"test.fe.v2.other\\":\\"/yet/another/app\\"}'
        data-sap-ui-frameOptions=\\"allow\\"
        data-sap-ui-xx-componentPreload=\\"off\\"
        data-sap-ui-xx-designMode=\\"true\\"
        data-sap-ui-xx-suppressDeactivationOfControllerCode=\\"true\\"
        data-sap-ui-xx-viewCache=\\"false\\"
        data-sap-ui-oninit=\\"module:open/ux/preview/client/flp/init\\">
    </script>
</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>

</html>"
`;

exports[`FlpSandbox router rta 1`] = `
"<!DOCTYPE HTML>
<html lang=\\"en\\">
<!-- Copyright (c) 2015 SAP AG, All Rights Reserved -->

<head>
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Local FLP Sandbox</title>

    <!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
    <script type=\\"text/javascript\\">
        window[\\"sap-ushell-config\\"] = {
            defaultRenderer: \\"fiori2\\",
            renderers: {
                fiori2: {
                    componentData: {
                        config: {
                            search: \\"hidden\\",
                            enableSearch: false
                        }
                    }
                }
            },
            applications:  {\\"app-preview\\":{\\"title\\":\\"My Simple App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.app\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"..\\"},\\"testfev2other-preview\\":{\\"title\\":\\"My Other App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.other\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"/yet/another/app\\"}}
        };
    </script>

    <script src=\\"../test-resources/sap/ushell/bootstrap/sandbox.js\\" id=\\"sap-ushell-bootstrap\\"></script>
    <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions=\\"allow\\"'' is a NON-SECURE setting for test environments -->
    <script id=\\"sap-ui-bootstrap\\"
        src=\\"../resources/sap-ui-core.js\\"
        data-sap-ui-libs=\\"sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template,sap.ui.rta\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-preload=\\"async\\"
        data-sap-ui-theme=\\"sap_horizon_dark\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-language=\\"en\\"
        data-sap-ui-bindingSyntax=\\"complex\\"
        data-sap-ui-flexibilityServices='[{\\"applyConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"writeConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"custom\\":true},{\\"connector\\":\\"LocalStorageConnector\\",\\"layers\\":[\\"CUSTOMER\\",\\"USER\\"]}]'
        data-sap-ui-resourceroots='{\\"open.ux.preview.client\\":\\"/preview/client\\",\\"test.fe.v2.app\\":\\"..\\",\\"test.fe.v2.other\\":\\"/yet/another/app\\"}'
        data-sap-ui-frameOptions=\\"allow\\"
        data-sap-ui-xx-componentPreload=\\"off\\"
        data-sap-ui-oninit=\\"module:open/ux/preview/client/flp/init\\"
        data-open-ux-preview-flex-settings='{\\"layer\\":\\"CUSTOMER_BASE\\",\\"scenario\\":\\"UI_ADAPTATION\\",\\"baseId\\":\\"test.fe.v2.app\\",\\"generator\\":\\"@sap-ux/preview-middleware\\",\\"developerMode\\":false}'>
    </script>
</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>

</html>"
`;

exports[`FlpSandbox router rta with developerMode=true 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
    <head>
        <meta charset=\\"utf-8\\" />
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\" />
        <meta name=\\"theme-color\\" content=\\"#000000\\" />
        <meta name=\\"description\\" content=\\"Web page for rendering SAP Fiori Tools Control Property Editor\\" />
        <link rel=\\"shortcut icon\\" type=\\"image/x-icon\\" href=\\"./editor/favicon.ico\\" />
        <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"./editor/app.css\\" />
        <title>Control Property Editor</title>
    </head>
    <body>
        <noscript>You need to enable JavaScript to run this app.</noscript>
        <div id=\\"root\\"></div>
        <script type=\\"module\\">
            import { start } from './editor/app.js';
            start({
                previewUrl: '/my/editor.html.inner.html?sap-ui-xx-viewCache=false&fiori-tools-rta-mode=forAdaptation&sap-ui-rta-skip-flex-validation=true&sap-ui-xx-condense-changes=true#app-preview',
                telemetry: false,
                rootElementId: 'root'
            });
        </script>
    </body>
</html>
"
`;

exports[`FlpSandbox router rta with developerMode=true 2`] = `
"<!DOCTYPE HTML>
<html lang=\\"en\\">
<!-- Copyright (c) 2015 SAP AG, All Rights Reserved -->

<head>
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Local FLP Sandbox</title>

    <!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
    <script type=\\"text/javascript\\">
        window[\\"sap-ushell-config\\"] = {
            defaultRenderer: \\"fiori2\\",
            renderers: {
                fiori2: {
                    componentData: {
                        config: {
                            search: \\"hidden\\",
                            enableSearch: false
                        }
                    }
                }
            },
            applications:  {\\"app-preview\\":{\\"title\\":\\"My Simple App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.app\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"..\\"},\\"testfev2other-preview\\":{\\"title\\":\\"My Other App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.other\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"/yet/another/app\\"}}
        };
    </script>

    <script src=\\"../test-resources/sap/ushell/bootstrap/sandbox.js\\" id=\\"sap-ushell-bootstrap\\"></script>
    <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions=\\"allow\\"'' is a NON-SECURE setting for test environments -->
    <script id=\\"sap-ui-bootstrap\\"
        src=\\"../resources/sap-ui-core.js\\"
        data-sap-ui-libs=\\"sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template,sap.ui.rta\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-preload=\\"async\\"
        data-sap-ui-theme=\\"sap_horizon_dark\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-language=\\"en\\"
        data-sap-ui-bindingSyntax=\\"complex\\"
        data-sap-ui-flexibilityServices='[{\\"applyConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"writeConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"custom\\":true},{\\"connector\\":\\"LocalStorageConnector\\",\\"layers\\":[\\"CUSTOMER\\",\\"USER\\"]}]'
        data-sap-ui-resourceroots='{\\"open.ux.preview.client\\":\\"/preview/client\\",\\"test.fe.v2.app\\":\\"..\\",\\"test.fe.v2.other\\":\\"/yet/another/app\\"}'
        data-sap-ui-frameOptions=\\"allow\\"
        data-sap-ui-xx-componentPreload=\\"off\\"
        data-sap-ui-xx-designMode=\\"true\\"
        data-sap-ui-xx-suppressDeactivationOfControllerCode=\\"true\\"
        data-sap-ui-xx-viewCache=\\"false\\"
        data-sap-ui-oninit=\\"module:open/ux/preview/client/flp/init\\"
        data-open-ux-preview-flex-settings='{\\"layer\\":\\"CUSTOMER_BASE\\",\\"scenario\\":\\"UI_ADAPTATION\\",\\"baseId\\":\\"test.fe.v2.app\\",\\"generator\\":\\"@sap-ux/control-property-editor\\",\\"developerMode\\":true,\\"pluginScript\\":\\"open/ux/preview/client/cpe/init\\"}'>
    </script>
</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>

</html>"
`;

exports[`FlpSandbox router rta with developerMode=true and plugin 1`] = `
"<!DOCTYPE HTML>
<html lang=\\"en\\">
<!-- Copyright (c) 2015 SAP AG, All Rights Reserved -->

<head>
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Local FLP Sandbox</title>

    <!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
    <script type=\\"text/javascript\\">
        window[\\"sap-ushell-config\\"] = {
            defaultRenderer: \\"fiori2\\",
            renderers: {
                fiori2: {
                    componentData: {
                        config: {
                            search: \\"hidden\\",
                            enableSearch: false
                        }
                    }
                }
            },
            applications:  {\\"app-preview\\":{\\"title\\":\\"My Simple App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.app\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"..\\"},\\"testfev2other-preview\\":{\\"title\\":\\"My Other App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.other\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"/yet/another/app\\"}}
        };
    </script>

    <script src=\\"../test-resources/sap/ushell/bootstrap/sandbox.js\\" id=\\"sap-ushell-bootstrap\\"></script>
    <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions=\\"allow\\"'' is a NON-SECURE setting for test environments -->
    <script id=\\"sap-ui-bootstrap\\"
        src=\\"../resources/sap-ui-core.js\\"
        data-sap-ui-libs=\\"sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template,sap.ui.rta\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-preload=\\"async\\"
        data-sap-ui-theme=\\"sap_horizon_dark\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-language=\\"en\\"
        data-sap-ui-bindingSyntax=\\"complex\\"
        data-sap-ui-flexibilityServices='[{\\"applyConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"writeConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"custom\\":true},{\\"connector\\":\\"LocalStorageConnector\\",\\"layers\\":[\\"CUSTOMER\\",\\"USER\\"]}]'
        data-sap-ui-resourceroots='{\\"open.ux.preview.client\\":\\"/preview/client\\",\\"test.fe.v2.app\\":\\"..\\",\\"test.fe.v2.other\\":\\"/yet/another/app\\"}'
        data-sap-ui-frameOptions=\\"allow\\"
        data-sap-ui-xx-componentPreload=\\"off\\"
        data-sap-ui-xx-designMode=\\"true\\"
        data-sap-ui-xx-suppressDeactivationOfControllerCode=\\"true\\"
        data-sap-ui-xx-viewCache=\\"false\\"
        data-sap-ui-oninit=\\"module:open/ux/preview/client/flp/init\\"
        data-open-ux-preview-flex-settings='{\\"layer\\":\\"CUSTOMER_BASE\\",\\"scenario\\":\\"UI_ADAPTATION\\",\\"baseId\\":\\"test.fe.v2.app\\",\\"generator\\":\\"@sap-ux/control-property-editor\\",\\"developerMode\\":true,\\"pluginScript\\":\\"open/ux/tools/plugin\\"}'>
    </script>
</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>

</html>"
`;

exports[`FlpSandbox router test/flp.html 1`] = `
"<!DOCTYPE HTML>
<html lang=\\"en\\">
<!-- Copyright (c) 2015 SAP AG, All Rights Reserved -->

<head>
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\">
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <title>Local FLP Sandbox</title>

    <!-- Bootstrap the unified shell in sandbox mode for standalone usage.

         The renderer is specified in the global Unified Shell configuration object \\"sap-ushell-config\\".

         The fiori2 renderer will render the shell header allowing, for instance,
         testing of additional application setting buttons.

         The navigation target resolution service is configured in a way that the empty URL hash is
         resolved to our own application.

         This example uses relative path references for the SAPUI5 resources and test-resources;
         it might be necessary to adapt them depending on the target runtime platform.
         The sandbox platform is restricted to development or demo use cases and must NOT be used
         for productive scenarios.
    -->
    <script type=\\"text/javascript\\">
        window[\\"sap-ushell-config\\"] = {
            defaultRenderer: \\"fiori2\\",
            renderers: {
                fiori2: {
                    componentData: {
                        config: {
                            search: \\"hidden\\",
                            enableSearch: false
                        }
                    }
                }
            },
            applications:  {\\"app-preview\\":{\\"title\\":\\"My Simple App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.app\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"..\\"},\\"testfev2other-preview\\":{\\"title\\":\\"My Other App\\",\\"description\\":\\"This is a very simple application.\\",\\"additionalInformation\\":\\"SAPUI5.Component=test.fe.v2.other\\",\\"applicationType\\":\\"URL\\",\\"url\\":\\"/yet/another/app\\"}}
        };
    </script>

    <script src=\\"../test-resources/sap/ushell/bootstrap/sandbox.js\\" id=\\"sap-ushell-bootstrap\\"></script>
    <!-- Bootstrap the UI5 core library. 'data-sap-ui-frameOptions=\\"allow\\"'' is a NON-SECURE setting for test environments -->
    <script id=\\"sap-ui-bootstrap\\"
        src=\\"../resources/sap-ui-core.js\\"
        data-sap-ui-libs=\\"sap.m,sap.ui.core,sap.ushell,sap.f,sap.ui.comp,sap.ui.generic.app,sap.suite.ui.generic.template\\"
        data-sap-ui-async=\\"true\\"
        data-sap-ui-preload=\\"async\\"
        data-sap-ui-theme=\\"sap_horizon_dark\\"
        data-sap-ui-compatVersion=\\"edge\\"
        data-sap-ui-language=\\"en\\"
        data-sap-ui-bindingSyntax=\\"complex\\"
        data-sap-ui-flexibilityServices='[{\\"applyConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"writeConnector\\":\\"open/ux/preview/client/flp/WorkspaceConnector\\",\\"custom\\":true},{\\"connector\\":\\"LocalStorageConnector\\",\\"layers\\":[\\"CUSTOMER\\",\\"USER\\"]}]'
        data-sap-ui-resourceroots='{\\"open.ux.preview.client\\":\\"/preview/client\\",\\"test.fe.v2.app\\":\\"..\\",\\"test.fe.v2.other\\":\\"/yet/another/app\\"}'
        data-sap-ui-frameOptions=\\"allow\\"
        data-sap-ui-xx-componentPreload=\\"off\\"
        data-sap-ui-oninit=\\"module:open/ux/preview/client/flp/init\\">
    </script>
</head>

<!-- UI Content -->
<body class=\\"sapUiBody\\" id=\\"content\\">
</body>

</html>"
`;